ODBC binding for Ruby
---------------------

Wed Feb 15 2017 version 0.99998 released

	* minor update to compile with Ruby 2.4, thangs to Kevin Deisz
	* preset output vars before SQLColAttributes() call

Wed Apr 15 2015 version 0.99997 released

	* fixed bug (typo) when compiling with Ruby < 2.0

Wed Mar 25 2015 version 0.99996 released

	* when built for Ruby >= 2.0 release GVL for potentially
	  long running ODBC API functions, thanks Matt Conover
	  for initial implementation

Wed Mar 13 2013 version 0.99995 released

	* added ODBC::Database.use_sql_column_name= flag to switch
	  usage of SQLColAttributes(SQL_COLUMN_LABEL) to 
	  SQLColAttributes(SQL_COLUMN_NAME) on per connection basis

Sat Jan 15 2011 version 0.99994 released

	* fixed column key caching, thanks Sean Noonan for bug report

Fri Dec 24 2010 version 0.99993 released

	* fixed error reporting in Database.transaction method,
	  thanks Shane Emmons for bug report and testing

Thu Sep 16 2010 version 0.99992 released

	* ODBC::Statement.each/each_hash now output arrays when
	  invoked without block
	* column keys in result hashes now are cached/recycled Ruby strings
	* added ODBC::Database methods use_time/use_utc to directly
	  output Ruby Time/Date objects
	* added encoding support in the UTF8 variant for Ruby >= 1.9
	* added module constant ODBC::UTF8 to indicate variant of module
	* fixes for M$SQL server reporting zero column sizes
	  and unknown data types for varchar(strmax) columns
	* eliminated compiler warnings
	* use StringValueCStr instead of STR2CSTR (Ruby >= 1.9.1)
	* small change for decision when to use SQLGetData() loop

Sun Apr 25 2010 version 0.99991 released

	* detect HAVE_LONG_LONG for builds with unixODBC
	* UTF-8 coding/decoding fix for range 0x80..0xBF

Thu Feb 18 2010 version 0.9999 released

	* integrated Bosko Ivanisevic's fixes in ext/utf8/extconf.rb
	  and test/test.rb and test/utf8/test.rb

Fri Jan 15 2010 version 0.9998 released

	* documentation update