@@ -1,6 +1,6 @@
-# $Id: README,v 1.45 2017/02/15 10:03:36 chw Exp chw $
+# $Id: README,v 1.46 2018/02/28 15:08:50 chw Exp chw $
 
-ruby-odbc-0.99998
+ruby-odbc-0.99999
 
 This is an ODBC binding for Ruby. So far it has been tested with
 
